--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -40,12 +40,12 @@ dependencies:
   image_picker: ^0.8.4
   path_provider: ^2.0.5
   dart_openai: ^4.0.0
-  http: ^1.1.0
+  http: ^1.1.1
   logger: ^2.0.2+1
   envied: ^0.5.1
+  sqflite: ^2.0.0
   image: ^3.0.1
-  flutter_tesseract_ocr: ^0.4.24
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
